add new website from server na

--- a/xem-phim-moi/nhung-nguoi-ban-tuong-tuong/index.html
+++ b/xem-phim-moi/nhung-nguoi-ban-tuong-tuong/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1783,21 +1783,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/am-nhac-duong-pho" title="Âm Nhạc Đường Phố">
+          <a class="list-top-movie-link" href="/phim-moi/cai-chet-cua-sieu-nhan" title="Cái Chết Của Siêu Nhân">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/am-nhac-duong-pho-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cai-chet-cua-sieu-nhan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Âm Nhạc Đường Phố
+             Cái Chết Của Siêu Nhân
             </span>
             <span class="list-top-movie-item-en">
-             Sing Street
+             The Death Of Superman
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1805,18 +1805,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vu-em-fbi-3-cha-nao-con-nay" title="Vú Em FBI 3: Cha Nào Con Nấy">
+          <a class="list-top-movie-link" href="/phim-moi/co-em-gai-nong-bong-cua-nguoi-yeu" title="Cô Em Gái Nóng Bỏng Của Người Yêu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vu-em-fbi-3-cha-nao-con-nay-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-em-gai-nong-bong-cua-nguoi-yeu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vú Em FBI 3: Cha Nào Con Nấy
+             Cô Em Gái Nóng Bỏng Của Người Yêu
             </span>
             <span class="list-top-movie-item-en">
-             Big Momma's 3: Like Father, Like Son
+             Hot Night: My Girlfriend's Little Sister
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1827,18 +1827,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dem-thu-3-kinh-hoang" title="Đêm Thứ 3 Kinh Hoàng">
+          <a class="list-top-movie-link" href="/phim-moi/can-nha-vung-que" title="Căn Nhà Vùng Quê">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-thu-3-kinh-hoang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/can-nha-vung-que-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đêm Thứ 3 Kinh Hoàng
+             Căn Nhà Vùng Quê
             </span>
             <span class="list-top-movie-item-en">
-             3rd Night
+             Cottage Country
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1849,18 +1849,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hien-tuong-sieu-nhien-o-tokyo" title="Hiện Tượng Siêu Nhiên Ở Tokyo">
+          <a class="list-top-movie-link" href="/phim-moi/all-things-fair" title="All Things Fair">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hien-tuong-sieu-nhien-o-tokyo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/all-things-fair-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hiện Tượng Siêu Nhiên Ở Tokyo
+             All Things Fair
             </span>
             <span class="list-top-movie-item-en">
-             Paranormal Activity: Tokyo Night
+             All Things Fair
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1871,21 +1871,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-gai-nam-ay-chung-ta-cung-theo-duoi" title="Cô Gái Năm Ấy Chúng Ta Cùng Theo Đuổi">
+          <a class="list-top-movie-link" href="/phim-moi/dung-si-da-chet-anh-hung-chet-yeu" title="Dũng Sĩ Đã Chết (Anh Hùng Chết Yểu)">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-gai-nam-ay-chung-ta-cung-theo-duoi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dung-si-da-chet-anh-hung-chet-yeu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cô Gái Năm Ấy Chúng Ta Cùng Theo Đuổi
+             Dũng Sĩ Đã Chết (Anh Hùng Chết Yểu)
             </span>
             <span class="list-top-movie-item-en">
-             You Are The Apple Of My Eye
+             The Legendary Hero Is Dead!
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
