add new website from server na

--- a/xem-phim-moi/canh-sat-beverly-hills-axel-f/index.html
+++ b/xem-phim-moi/canh-sat-beverly-hills-axel-f/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1785,18 +1785,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/loan-nhip" title="Loạn Nhịp">
+          <a class="list-top-movie-link" href="/phim-moi/pasta-huong-vi-tinh-yeu" title="Pasta: Hương vị tình yêu">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loan-nhip-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pasta-huong-vi-tinh-yeu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Loạn Nhịp
+             Pasta: Hương vị tình yêu
             </span>
             <span class="list-top-movie-item-en">
-             Heart Beat
+             Pasta
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-nguoi-may" title="Cuộc Chiến Người Máy">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-nguoi-may-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cuộc Chiến Người Máy
+            </span>
+            <span class="list-top-movie-item-en">
+             Ultramarines: A Warhammer 40,000 Movie
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tom-and-jerry-cowboy-up" title="Tom and Jerry: Cowboy Up">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tom-and-jerry-cowboy-up-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tom and Jerry: Cowboy Up
+            </span>
+            <span class="list-top-movie-item-en">
+             Tom and Jerry: Cowboy Up
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1807,21 +1851,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/pinocchio" title="Pinocchio">
+          <a class="list-top-movie-link" href="/phim-moi/lam-duong-lac-loi" title="Lầm đường lạc lối">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pinocchio-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lam-duong-lac-loi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Pinocchio
+             Lầm đường lạc lối
             </span>
             <span class="list-top-movie-item-en">
-             Pinocchio
+             Go Astray
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1829,65 +1873,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/deck-the-halls" title="Deck the Halls">
+          <a class="list-top-movie-link" href="/phim-moi/ashley-garcia-thien-tai-dang-yeu-giang-sinh" title="Ashley Garcia: Thiên tài đang yêu (Giáng Sinh)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/deck-the-halls-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ashley-garcia-thien-tai-dang-yeu-giang-sinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Deck the Halls
+             Ashley Garcia: Thiên tài đang yêu (Giáng Sinh)
             </span>
             <span class="list-top-movie-item-en">
-             Deck the Halls
+             Ashley Garcia: Genius in Love (Xmas)
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ba-co-em-gai-dam-dang" title="Ba Cô Em Gái Đảm Đang">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ba-co-em-gai-dam-dang-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ba Cô Em Gái Đảm Đang
-            </span>
-            <span class="list-top-movie-item-en">
-             Covert Report Of Allegations
-            </span>
-            <span class="list-top-movie-item-view">
-             6 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/anh-hung-cai-the-cua-toi-phan-1" title="Anh Hùng Cái Thế Của Tôi Phần 1">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-hung-cai-the-cua-toi-phan-1-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Anh Hùng Cái Thế Của Tôi Phần 1
-            </span>
-            <span class="list-top-movie-item-en">
-             A Little Love Song (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
