add new website from server na

--- a/xem-phim-moi/canh-sat-beverly-hills-axel-f/index.html
+++ b/xem-phim-moi/canh-sat-beverly-hills-axel-f/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1785,62 +1785,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/pasta-huong-vi-tinh-yeu" title="Pasta: Hương vị tình yêu">
+          <a class="list-top-movie-link" href="/phim-moi/hanh-tinh-mau-xanh-duong" title="Hành Tinh Màu Xanh Dương">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pasta-huong-vi-tinh-yeu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanh-tinh-mau-xanh-duong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Pasta: Hương vị tình yêu
+             Hành Tinh Màu Xanh Dương
             </span>
             <span class="list-top-movie-item-en">
-             Pasta
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-nguoi-may" title="Cuộc Chiến Người Máy">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-nguoi-may-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cuộc Chiến Người Máy
-            </span>
-            <span class="list-top-movie-item-en">
-             Ultramarines: A Warhammer 40,000 Movie
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tom-and-jerry-cowboy-up" title="Tom and Jerry: Cowboy Up">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tom-and-jerry-cowboy-up-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tom and Jerry: Cowboy Up
-            </span>
-            <span class="list-top-movie-item-en">
-             Tom and Jerry: Cowboy Up
+             The Blue Planet
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1851,21 +1807,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lam-duong-lac-loi" title="Lầm đường lạc lối">
+          <a class="list-top-movie-link" href="/phim-moi/cuop-tien-mafia" title="Cướp Tiền Mafia">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lam-duong-lac-loi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuop-tien-mafia-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lầm đường lạc lối
+             Cướp Tiền Mafia
             </span>
             <span class="list-top-movie-item-en">
-             Go Astray
+             Rob the Mob
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1873,21 +1829,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ashley-garcia-thien-tai-dang-yeu-giang-sinh" title="Ashley Garcia: Thiên tài đang yêu (Giáng Sinh)">
+          <a class="list-top-movie-link" href="/phim-moi/boo-bitch" title="Boo, Bitch">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ashley-garcia-thien-tai-dang-yeu-giang-sinh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/boo-bitch-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ashley Garcia: Thiên tài đang yêu (Giáng Sinh)
+             Boo, Bitch
             </span>
             <span class="list-top-movie-item-en">
-             Ashley Garcia: Genius in Love (Xmas)
+             Boo, Bitch
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-ay-va-toi-em-chon-ai" title="Người Ấy Và Tôi, Em Chọn Ai">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-ay-va-toi-em-chon-ai-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Người Ấy Và Tôi, Em Chọn Ai
+            </span>
+            <span class="list-top-movie-item-en">
+             Sonu Ke Titu Ki Sweety
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thuc-tap-sinh-tan-nhan" title="Thực Tập Sinh Tàn Nhẫn">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thuc-tap-sinh-tan-nhan-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thực Tập Sinh Tàn Nhẫn
+            </span>
+            <span class="list-top-movie-item-en">
+             Cold Blooded Intern
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
