--- a/xem-phim-moi/ve-binh-dai-ngan-ha-3/index.html
+++ b/xem-phim-moi/ve-binh-dai-ngan-ha-3/index.html
@@ -1199,7 +1199,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1789,21 +1789,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ham-muon-chay-bong" title="Ham Muốn Cháy Bỏng">
+          <a class="list-top-movie-link" href="/phim-moi/robot-biet-yeu" title="Rôbôt Biết Yêu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ham-muon-chay-bong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/robot-biet-yeu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ham Muốn Cháy Bỏng
+             Rôbôt Biết Yêu
             </span>
             <span class="list-top-movie-item-en">
-             Desire
+             WALL-E
             </span>
             <span class="list-top-movie-item-view">
-             7 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1811,21 +1811,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/get-hard" title="Get Hard">
+          <a class="list-top-movie-link" href="/phim-moi/con-re-cua-toi-la-mot-not-ruoi" title="Con rể của tôi là một nốt ruồi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/get-hard-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-re-cua-toi-la-mot-not-ruoi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Get Hard
+             Con rể của tôi là một nốt ruồi
             </span>
             <span class="list-top-movie-item-en">
-             Get Hard
+             My Son-in-law Is A Mole
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1833,21 +1833,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mui-huong-da-mat" title="Mùi hương đã mất">
+          <a class="list-top-movie-link" href="/phim-moi/tham-phan-dredd" title="Thẩm Phán Dredd">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mui-huong-da-mat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-phan-dredd-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mùi hương đã mất
+             Thẩm Phán Dredd
             </span>
             <span class="list-top-movie-item-en">
-             The Perfumier
+             Judge Dredd
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1855,21 +1855,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/jinn" title="Jinn">
+          <a class="list-top-movie-link" href="/phim-moi/ki-niem-tuoi-thanh-xuan" title="Kỉ Niệm Tuổi Thanh Xuân">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/jinn-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ki-niem-tuoi-thanh-xuan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Jinn
+             Kỉ Niệm Tuổi Thanh Xuân
             </span>
             <span class="list-top-movie-item-en">
-             Jinn
+             Boyhood
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1877,21 +1877,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/canh-chim-noi-dia-chan" title="Cánh chim nơi địa chấn">
+          <a class="list-top-movie-link" href="/phim-moi/mat-na-guong" title="Mặt Nạ Gương">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/canh-chim-noi-dia-chan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-na-guong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cánh chim nơi địa chấn
+             Mặt Nạ Gương
             </span>
             <span class="list-top-movie-item-en">
-             Earthquake Bird
+             MirrorMask
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
